@@ -3,7 +3,7 @@
 # Contributor: William Rea <sillywilly@gmail.com>
 
 pkgname=fontforge
-pkgver=20090224
+pkgver=20090408
 pkgrel=1
 pkgdesc="An outline and bitmap font editor"
 arch=('i686' 'x86_64')
@@ -13,8 +13,8 @@ depends=('libxkbui' 'libxi')
 makedepends=('freetype2')
 options=('!libtool' '!makeflags')
 source=(http://downloads.sourceforge.net/sourceforge/fontforge/fontforge_full-${pkgver}.tar.bz2)
-md5sums=('5b564437e5e3db660b0202647b6f733b')
-sha1sums=('2e4a57d9c13f0d220e80d413c93cc559b6c14ed4')
+md5sums=('5a85abd05b8dcefcb5e21e24d99299f9')
+sha1sums=('0bc12559705ff0b214a3d6b0daf87cef79a379e8')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
